fix ios hide scrollbar

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ scroll-container[scrollbar="off"] {
 }
 
 scroll-container[scrollbar="off"]::-webkit-scrollbar {
+    display: none;
     width: 0;
     height: 0;
 }
